# qifa

./: README.md  pyproject.toml
src/qifa/: cli.py
