[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qifa"
version = "0.1.0"
description = "flash-attn quick installer"
readme = "README.md"
requires-python = ">=3.8"
authors = [{name="Voidful"}]
license = {text = "BSD-3-Clause"}
dependencies = [
  "requests>=2.31",
  "packaging>=24.0",
  "typing-extensions>=4.8",
]

[project.urls]
Homepage = "https://github.com/Dao-AILab/flash-attention"

[project.scripts]
qifa = "qifa.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["qifa"]